--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,22 +1,21 @@
-name: Build and Deploy
+name: Build and Update Manifests
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - 'pom.xml'
-      - 'src/**'
-      - '.github/workflows/build-and-deploy.yaml'
+    branches: [ "main" ]
+    paths-ignore:
+      - 'infra/kubernets/**'
+      - 'README.md'
   workflow_dispatch:
 
-
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: eurival/ged-camunda-service
+  IMAGE_NAME: docker.io/eurival/ged-camunda-service
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -24,34 +23,36 @@ jobs:
           distribution: temurin
           java-version: '21'
           cache: maven
-      - name: Set project version
-        id: project-version
+      - name: Get project version
         run: |
-          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          VERSION=$(mvn -q -ntp help:evaluate -Dexpression=project.version -DforceStdout)
           echo "PROJECT_VERSION=$VERSION" >> $GITHUB_ENV
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build & push image
         run: mvn -B -ntp clean compile jib:build
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      - uses: azure/setup-kubectl@v4
-        with:
-          version: 'latest'
-      - name: Configure kubeconfig
+      - name: Install yq
         run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-          chmod 600 ~/.kube/config
-      - name: Apply manifests
-        run: kubectl apply -k infra/kubernetes
-      - name: Check rollout
-        run: kubectl rollout status deployment/ged-camunda-service-deployment -n gedtotal-apps
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+      - name: Update image tag in kustomization
+        env:
+          FILE: infra/kubernetes/kustomization.yaml
+        run: |
+          yq -i '(.images[] | select(.name == env(IMAGE_NAME))).newTag = env(PROJECT_VERSION)' "$FILE"
+          echo "Updated entry:"
+          yq '.images[] | select(.name == env(IMAGE_NAME))' "$FILE"
+      - name: Commit updated manifests
+        run: |
+          git config user.name  "ci-bot"
+          git config user.email "ci-bot@users.noreply.github.com"
+          git add infra/kubernetes/kustomization.yaml
+          if git diff --cached --quiet; then
+            echo "No changes to commit"; exit 0
+          fi
+          git commit -m "chore(deploy): camunda-service ${PROJECT_VERSION}"
+          git push
